# iced-vpn

./: Cargo.toml  Dockerfile  README.md
docker/: down.sh  start-vpn.sh  up.sh
src/: client.rs  crypto.rs  error.rs  io.rs  lib.rs  main.rs  message.rs  p2p.rs  server.rs  tun.rs
