[package]
name = "iced-vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
log = "0.4.14"
thiserror = "1.0.30"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
tokio-tun = "0.5.1"
etherparse = "0.10.1"
ring = "0.16.20"
webrtc-ice = "0.6.6"
webrtc-util = "0.5.3"
env_logger = { version = "0.9.0", optional = true }
structopt = { version = "0.3.26", optional = true }
toml = { version = "0.5.8", optional = true }

[features]
default = []
bin = ["structopt", "toml", "env_logger"]

[[bin]]
name = "iced-vpn"
path = "src/main.rs"
required-features = ["bin"]
